syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.opentelemetry.deployment";
option java_outer_classname = "StreamingProto";

package streaming;

service Streaming {
  rpc Pipe(stream Item) returns (stream Item) {}
  rpc PipeBlocking(stream Item) returns (stream Item) {}
}

message Item {
  string message = 1;
}
