syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.opentelemetry.deployment";
option java_outer_classname = "HelloProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
